tests/neg/customArgs/noimports.scala
object Test {
  val t: Int = 1 // error: not found Int
}
